--- a/index.html
+++ b/index.html
@@ -884,8 +884,7 @@
 
       <!-- Footer: Copyright and attribution -->
       <footer>
-        © <span id="y"></span> Adrian • Built with hand-rolled HTML/CSS. Print
-        this page to save as PDF.
+        © <span id="y"></span> Adrian Mungroo • Built very carefully...
       </footer>
     </div>
 
