Making updates to CV
Changed order of items on page

--- a/index.html
+++ b/index.html
@@ -186,8 +186,63 @@
 
       <section id="experience">
         <h2 class="section-title">Experience</h2>
-
         <div class="timeline">
+          <div class="timeline-item">
+            <h3>Graduate Researcher - Spatial & Statistical Data Analytics</h3>
+            <div class="sub">
+              Georgia Institute of Technology — Smart Campus
+            </div>
+            <div class="sub">2022–Present • Atlanta, GA</div>
+            <button class="toggle-btn" onclick="toggleDetails(this)">
+              More info ▼
+            </button>
+            <div class="details" style="display: none">
+              <ul>
+                <li>
+                  Created a canopy height map of Georgia Tech's campus using
+                  LiDAR and NDVI data.
+                </li>
+                <li>
+                  <a
+                    href="https://campus-work-distribution-20-rv2phdicoqjncmdq47t5xx.streamlit.app/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Campus Work order mapping and visualization</a
+                  >
+                  using Georgia Tech's work order data.
+                </li>
+                <li>
+                  <a
+                    href="https://energywatch.gatech.edu/kb-EUI/#/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Campus performance dashboard</a
+                  >
+                  using Georgia Tech's building performance and sensor health
+                  data.
+                </li>
+                <li>
+                  Provided geospatial support to develop a Python GIS-Modelica
+                  translator, enabling non-technical users to interact with
+                  complex Modelica simulation models through familiar GIS
+                  interfaces like ArcGIS Pro.
+                </li>
+                <li>
+                  Addressed inquiries about construction feasibility and HVAC
+                  capacity using scenario simulations in Modelica.
+                </li>
+              </ul>
+              <div class="tags">
+                <span class="tag">Python</span><span class="tag">GeoPandas</span
+                ><span class="tag">H3</span><span class="tag">xarray</span
+                ><span class="tag">Streamlit</span
+                ><span class="tag">PostGIS</span><span class="tag">NumPy</span
+                ><span class="tag">Vue.js</span><span class="tag">Modelica</span
+                ><span class="tag">ArcGIS Pro</span>
+              </div>
+            </div>
+          </div>
+
           <div class="timeline-item">
             <h3>Graduate Summer Intern - Building Performance Modeling</h3>
             <div class="sub">National Renewable Energy Laboratory (NREL)</div>
@@ -228,7 +283,7 @@
             <div class="sub">
               DoE FOA Georgia EnergyShed (DE-FOA-0002565, #2565-1535)
             </div>
-            <div class="sub">2023–2025 • Atlanta, GA</div>
+            <div class="sub">2022–2025 • Atlanta, GA</div>
             <button class="toggle-btn" onclick="toggleDetails(this)">
               More info ▼
             </button>
@@ -282,90 +337,11 @@
           </div>
 
           <div class="timeline-item">
-            <h3>Graduate Researcher - Spatial & Statistical Data Analytics</h3>
-            <div class="sub">
-              Georgia Institute of Technology — Smart Campus
-            </div>
-            <div class="sub">2022–Present • Atlanta, GA</div>
-            <button class="toggle-btn" onclick="toggleDetails(this)">
-              More info ▼
-            </button>
-            <div class="details" style="display: none">
-              <ul>
-                <li>
-                  <a
-                    href="https://movement-model.streamlit.app/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    >Campus-scale movement model</a
-                  >
-                  using Georgia Tech's WiFi data.
-                  <ul>
-                    <li>
-                      Manually created a node and edge network model for campus
-                      in ArcGIS Pro, detailing every possible path of movement
-                      on campus.
-                    </li>
-                    <li>
-                      Created data structure to store movement events from the
-                      raw WiFi access point log data.
-                    </li>
-                    <li>
-                      Created congestion time series for all sidewalks and
-                      walkways in the campus using the movement events.
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  Created a canopy height map of Georgia Tech's campus using
-                  LiDAR and NDVI data.
-                </li>
-                <li>
-                  <a
-                    href="https://campus-work-distribution-20-rv2phdicoqjncmdq47t5xx.streamlit.app/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    >Campus Work order mapping and visualization</a
-                  >
-                  using Georgia Tech's work order data.
-                </li>
-                <li>
-                  <a
-                    href="https://energywatch.gatech.edu/kb-EUI/#/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    >Campus performance dashboard</a
-                  >
-                  using Georgia Tech's building performance and sensor health
-                  data.
-                </li>
-                <li>
-                  Provided geospatial support to develop a Python GIS-Modelica
-                  translator, enabling non-technical users to interact with
-                  complex Modelica simulation models through familiar GIS
-                  interfaces like ArcGIS Pro.
-                </li>
-                <li>
-                  Addressed inquiries about construction feasibility and HVAC
-                  capacity using scenario simulations in Modelica.
-                </li>
-              </ul>
-              <div class="tags">
-                <span class="tag">Python</span><span class="tag">GeoPandas</span
-                ><span class="tag">H3</span><span class="tag">xarray</span
-                ><span class="tag">Streamlit</span
-                ><span class="tag">PostGIS</span><span class="tag">NumPy</span
-                ><span class="tag">Vue.js</span><span class="tag">Modelica</span
-                ><span class="tag">ArcGIS Pro</span>
-              </div>
-            </div>
-          </div>
-          <div class="timeline-item">
             <h3>Undergraduate Researcher</h3>
             <div class="sub">
               Georgia Institute of Technology — Hyperloop GT HERMES
             </div>
-            <div class="sub">2018–2022 • Atlanta, GA</div>
+            <div class="sub">2018–2020 • Atlanta, GA</div>
             <button class="toggle-btn" onclick="toggleDetails(this)">
               More info ▼
             </button>
@@ -458,7 +434,7 @@
           <h3>
             Ranking Site Suitability for Data Centers in Fulton County, Atlanta
           </h3>
-          <div class="sub">January 2025 - February 2025 • Atlanta, GA</div>
+          <div class="sub">Jan 2025 - Feb 2025 • Atlanta, GA</div>
           <button class="toggle-btn" onclick="toggleDetails(this)">
             More info ▼
           </button>
@@ -513,7 +489,7 @@
 
         <div class="item">
           <h3>Georgia Digital Surface Model (DSM) Generation</h3>
-          <div class="sub">Jan 2025 - August 2025 • Atlanta, GA</div>
+          <div class="sub">Jan 2025 - Aug 2025 • Atlanta, GA</div>
           <button class="toggle-btn" onclick="toggleDetails(this)">
             More info ▼
           </button>
@@ -533,7 +509,7 @@
 
         <div class="item">
           <h3>Georgia Tree Canopy Height Model Generation</h3>
-          <div class="sub">June 2025 - August 2025 • Atlanta, GA</div>
+          <div class="sub">Jun 2025 - Aug 2025 • Atlanta, GA</div>
           <button class="toggle-btn" onclick="toggleDetails(this)">
             More info ▼
           </button>
@@ -552,7 +528,7 @@
           <h3>
             Ranking Reusability of Vacant Parcels in Fulton County, Atlanta
           </h3>
-          <div class="sub">June 2024 - August 2024 • Atlanta, GA</div>
+          <div class="sub">Jun 2024 - Aug 2024 • Atlanta, GA</div>
           <button class="toggle-btn" onclick="toggleDetails(this)">
             More info ▼
           </button>
@@ -570,8 +546,53 @@
         </div>
       </section>
 
+      <!-- Projects -->
       <section id="projects">
         <h2 class="section-title">Projects</h2>
+
+        <div class="item">
+          <h3>
+            <a
+              href="https://movement-model.streamlit.app/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Campus-scale Movement Model</a
+            >
+          </h3>
+          <div class="sub">
+            Using Georgia Tech's WiFi data to make spatio-temporal movement
+            models
+          </div>
+          <div class="sub">2025 • Atlanta, GA</div>
+          <button class="toggle-btn" onclick="toggleDetails(this)">
+            More info ▼
+          </button>
+          <div class="details" style="display: none">
+            <ul>
+              <li>
+                Manually created a node and edge network model for campus in
+                ArcGIS Pro, detailing every possible path of movement on campus.
+              </li>
+              <li>
+                Created data structure to store movement events from the raw
+                WiFi access point log data.
+              </li>
+              <li>
+                Created congestion time series for all sidewalks and walkways in
+                the campus using the movement events.
+              </li>
+            </ul>
+            <div class="tags">
+              <span class="tag">Python</span>
+              <span class="tag">GeoPandas</span>
+              <span class="tag">H3</span>
+              <span class="tag">xarray</span>
+              <span class="tag">Streamlit</span>
+              <span class="tag">ArcGIS Pro</span>
+              <span class="tag">Dijkstra's Algo</span>
+            </div>
+          </div>
+        </div>
 
         <div class="item">
           <h3>CAKE — Consolidated Area Knowledge Extractor</h3>
