Moved things around and added presentations section

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
             <a href="#projects">Projects</a>
             <a href="#publications">Publications</a>
             <a href="#future-publications">Future Publications</a>
+            <a href="#presentations">Presentations & Talks</a>
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
           </nav>
@@ -249,8 +250,9 @@
                   of Georgia Tech's campus using WiFi access point log data.
                 </li>
                 <li>
-                  Created a canopy height map of Georgia Tech's campus using
-                  LiDAR and NDVI data.
+                  Created a
+                  <a href="#canopy-height">canopy height map</a>
+                  of Georgia Tech's campus using LiDAR and NDVI data.
                 </li>
                 <li>
                   <a
@@ -383,6 +385,16 @@
                   Southface Institute.
                 </li>
               </ul>
+              <div class="tags">
+                <span class="tag">GIS</span>
+                <span class="tag">Python</span>
+                <span class="tag">GeoPandas</span>
+                <span class="tag">Pandas</span>
+                <span class="tag">H3</span>
+                <span class="tag">Vue.js</span>
+                <span class="tag">Streamlit</span>
+                <span class="tag">ArcGIS Pro</span>
+              </div>
             </div>
           </div>
 
@@ -472,6 +484,10 @@
                   desired launch angles on a scaled-down prototype.
                 </li>
               </ul>
+              <div class="tags">
+                <span class="tag">MATLAB</span>
+                <span class="tag">Arduino</span>
+              </div>
             </div>
           </div>
         </div>
@@ -578,29 +594,6 @@
         </div>
 
         <div class="item">
-          <h3>Georgia Tree Canopy Height Model Generation</h3>
-          <div class="sub">Jun 2025 - Aug 2025 • Atlanta, GA</div>
-          <button class="toggle-btn" onclick="toggleDetails(this)">
-            More info ▼
-          </button>
-          <div class="details" style="display: none">
-            <ul>
-              <li>
-                Used the DSM data along with NDVI (Normalized Difference
-                Vegetation Index) data to create a tree canopy height map for
-                Georgia.
-              </li>
-            </ul>
-            <div class="tags">
-              <span class="tag">Python</span>
-              <span class="tag">Pandas</span>
-              <span class="tag">H3</span>
-              <span class="tag">xarray</span>
-            </div>
-          </div>
-        </div>
-
-        <div class="item">
           <h3>
             Ranking Reusability of Vacant Parcels in Fulton County, Atlanta
           </h3>
@@ -672,6 +665,29 @@
               <span class="tag">Streamlit</span>
               <span class="tag">ArcGIS Pro</span>
               <span class="tag">Dijkstra's Algo</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="item" id="canopy-height">
+          <h3>Georgia Tech Tree Canopy Height Model</h3>
+          <div class="sub">Jun 2025 - Aug 2025 • Atlanta, GA</div>
+          <button class="toggle-btn" onclick="toggleDetails(this)">
+            More info ▼
+          </button>
+          <div class="details" style="display: none">
+            <ul>
+              <li>
+                Used Georgia Tech's DSM data along with NDVI (Normalized
+                Difference Vegetation Index) data to create a canopy height map
+                for Georgia Tech's campus.
+              </li>
+            </ul>
+            <div class="tags">
+              <span class="tag">Python</span>
+              <span class="tag">Pandas</span>
+              <span class="tag">H3</span>
+              <span class="tag">xarray</span>
             </div>
           </div>
         </div>
@@ -868,6 +884,30 @@
 
       <section id="future-publications">
         <h2 class="section-title">Future Publications</h2>
+
+        <div class="item" id="energy-equity">
+          <h3>
+            Using Social Vulnerability Index and Power Outage Data to
+            demonstrate the MAUP effect on energy equity
+          </h3>
+          <div class="sub">Mungroo, A., et al.</div>
+          <div class="sub">
+            Target: Energy Policy / Applied Energy (In Preparation)
+          </div>
+          <div class="sub">Expected Submission: Q4 2026</div>
+          <button class="toggle-btn" onclick="toggleDetails(this)">
+            More info ▼
+          </button>
+          <div class="details" style="display: none">
+            <ul>
+              <li>
+                Shows how MAUP adjusts policy conclusions based on the spatial
+                scale of the analysis.
+              </li>
+            </ul>
+          </div>
+        </div>
+
         <div class="item">
           <h3>
             Hexagon-Scale Energy Equity Modeling Using Integrated Socioeconomic,
@@ -899,6 +939,7 @@
             </ul>
           </div>
         </div>
+
         <div class="item">
           <h3>
             Modeling Urban Growth, Energy Inequality, and Infrastructure Stress
@@ -923,6 +964,30 @@
             </ul>
           </div>
         </div>
+      </section>
+
+      <section id="presentations">
+        <h2 class="section-title">Presentations & Talks</h2>
+
+        <div class="item">
+          <h3>The Modern Arms Race: Energy and AI</h3>
+          <div class="sub">Guest Lecture at KENTECH</div>
+          <div class="sub">November 2025 • Naju, South Korea</div>
+          <button class="toggle-btn" onclick="toggleDetails(this)">
+            More info ▼
+          </button>
+          <div class="details" style="display: none">
+            <ul>
+              <li>
+                Presented introductory and broad overviews of concepts and
+                trends related to energy & AI to a group of college students
+                from KENTECH.
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Add more entries here following the same format -->
       </section>
 
       <section id="education">
