--- a/index.html
+++ b/index.html
@@ -106,9 +106,72 @@
       <span>Filter</span>
     </button>
 
+    <!-- Theme Toggle Button -->
+    <button
+      id="theme-toggle-btn"
+      class="theme-toggle-btn"
+      aria-label="Toggle light/dark mode"
+      title="Toggle light/dark mode"
+    >
+      <svg
+        class="sun-icon"
+        width="20"
+        height="20"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+      >
+        <circle cx="12" cy="12" r="5"></circle>
+        <line x1="12" y1="1" x2="12" y2="3"></line>
+        <line x1="12" y1="21" x2="12" y2="23"></line>
+        <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+        <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+        <line x1="1" y1="12" x2="3" y2="12"></line>
+        <line x1="21" y1="12" x2="23" y2="12"></line>
+        <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+        <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+      </svg>
+      <svg
+        class="moon-icon"
+        width="20"
+        height="20"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        style="display: none"
+      >
+        <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+      </svg>
+      <span>Dark</span>
+    </button>
+
+    <!-- Width Toggle Button -->
+    <button
+      id="width-toggle-btn"
+      class="width-toggle-btn"
+      aria-label="Toggle layout width"
+      title="Toggle narrow/wide layout"
+    >
+      <svg
+        width="20"
+        height="20"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+      >
+        <rect x="3" y="3" width="18" height="18" rx="2"></rect>
+        <line x1="9" y1="3" x2="9" y2="21"></line>
+        <line x1="15" y1="3" x2="15" y2="21"></line>
+      </svg>
+      <span>Wide</span>
+    </button>
+
     <div class="wrap">
-      <!-- Header: Profile information and navigation -->
-      <header>
+      <!-- General Content: Profile information -->
+      <header class="general-content">
         <div class="avatar">A</div>
         <div>
           <h1>Adrian Mungroo</h1>
@@ -194,23 +257,29 @@
               <span style="margin-left: 6px">Download CV</span>
             </a>
           </div>
-          <nav>
-            <a href="#about">About</a>
-            <a href="#experience">Experience</a>
-            <a href="#independent-research">Independent Research</a>
-            <a href="#projects">Projects</a>
-            <a href="#publications">Publications</a>
-            <a href="#future-publications">Future Publications</a>
-            <a href="#presentations">Presentations & Talks</a>
-            <a href="#education">Education</a>
-            <a href="#skills">Skills</a>
-          </nav>
         </div>
       </header>
 
-      <!-- Main Content Sections -->
-      <section id="about">
-        <h2 class="section-title">About</h2>
+      <!-- Tab Layout Container -->
+      <div class="tab-container">
+        <!-- Vertical Tabs -->
+        <nav class="vertical-tabs">
+          <button class="tab-btn active" data-tab="about">About</button>
+          <button class="tab-btn" data-tab="experience">Experience</button>
+          <button class="tab-btn" data-tab="research">Research</button>
+          <button class="tab-btn" data-tab="projects">Projects</button>
+          <button class="tab-btn" data-tab="publications">Publications</button>
+          <button class="tab-btn" data-tab="presentations">Presentations</button>
+          <button class="tab-btn" data-tab="education">Education</button>
+          <button class="tab-btn" data-tab="skills">Skills</button>
+        </nav>
+
+        <!-- Tab Content Area -->
+        <div class="tab-content-area">
+
+          <!-- About Tab -->
+          <section id="about" class="tab-content active">
+            <h2 class="section-title">About</h2>
         <p class="intro-text">
           Hey there! I'm Adrian, a PhD researcher exploring how space, data, and
           energy shape each other. I use geostatistics and large-scale spatial
@@ -251,10 +320,11 @@
             parcels in Atlanta
           </li>
         </ul>
-      </section>
+          </section>
 
-      <section id="experience">
-        <h2 class="section-title">Experience</h2>
+          <!-- Experience Tab -->
+          <section id="experience" class="tab-content">
+            <h2 class="section-title">Experience</h2>
         <div class="timeline">
           <div class="timeline-item">
             <h3>Graduate Researcher - Spatial & Statistical Data Analytics</h3>
@@ -513,11 +583,12 @@
               </div>
             </div>
           </div>
-        </div>
-      </section>
+            </div>
+          </section>
 
-      <section id="independent-research">
-        <h2 class="section-title">Independent Research & Development</h2>
+          <!-- Research Tab -->
+          <section id="research" class="tab-content">
+            <h2 class="section-title">Independent Research & Development</h2>
 
         <div class="item">
           <h3>
@@ -641,12 +712,12 @@
               <span class="tag">xarray</span>
             </div>
           </div>
-        </div>
-      </section>
+            </div>
+          </section>
 
-      <!-- Projects -->
-      <section id="projects">
-        <h2 class="section-title">Projects</h2>
+          <!-- Projects Tab -->
+          <section id="projects" class="tab-content">
+            <h2 class="section-title">Projects</h2>
 
         <div class="item" id="movement-model">
           <h3>
@@ -799,11 +870,12 @@
               <span class="tag">Constraint Sizing</span>
             </div>
           </div>
-        </div>
-      </section>
+            </div>
+          </section>
 
-      <section id="publications">
-        <h2 class="section-title">Publications</h2>
+          <!-- Publications Tab -->
+          <section id="publications" class="tab-content">
+            <h2 class="section-title">Publications</h2>
         <div class="item">
           <h3>
             Leveraging Convexity on Performance Envelope to Detect and Reduce
@@ -902,13 +974,12 @@
               </li>
             </ul>
           </div>
-        </div>
-      </section>
+            </div>
 
-      <section id="future-publications">
-        <h2 class="section-title">Future Publications</h2>
+            <div class="publications-separator"></div>
+            <h2 class="section-title">Future Publications</h2>
 
-        <div class="item" id="energy-equity">
+            <div class="item" id="energy-equity">
           <h3>
             Using Social Vulnerability Index and Power Outage Data to
             demonstrate the MAUP effect on energy equity
@@ -986,11 +1057,12 @@
               </li>
             </ul>
           </div>
-        </div>
-      </section>
+            </div>
+          </section>
 
-      <section id="presentations">
-        <h2 class="section-title">Presentations & Talks</h2>
+          <!-- Presentations Tab -->
+          <section id="presentations" class="tab-content">
+            <h2 class="section-title">Presentations & Talks</h2>
 
         <div class="item">
           <h3>The Modern Arms Race: Energy and AI</h3>
@@ -1008,13 +1080,14 @@
               </li>
             </ul>
           </div>
-        </div>
+            </div>
 
-        <!-- Add more entries here following the same format -->
-      </section>
+            <!-- Add more entries here following the same format -->
+          </section>
 
-      <section id="education">
-        <h2 class="section-title">Education</h2>
+          <!-- Education Tab -->
+          <section id="education" class="tab-content">
+            <h2 class="section-title">Education</h2>
         <div class="item">
           <h3>PhD Candidate in Mechanical Engineering</h3>
           <div class="sub">Georgia Institute of Technology</div>
@@ -1030,11 +1103,12 @@
           <h3>B.S., Aerospace Engineering</h3>
           <div class="sub">Georgia Institute of Technology</div>
           <div class="sub">2016–2020</div>
-        </div>
-      </section>
+            </div>
+          </section>
 
-      <section id="skills">
-        <h2 class="section-title">Skills</h2>
+          <!-- Skills Tab -->
+          <section id="skills" class="tab-content">
+            <h2 class="section-title">Skills</h2>
 
         <div class="skill-grid">
           <div class="skill-category">
@@ -1101,8 +1175,10 @@
               <span class="tag">Urban Energy Systems</span>
             </div>
           </div>
+            </div>
+          </section>
         </div>
-      </section>
+      </div>
 
       <!-- Footer: Copyright and attribution -->
       <footer>
