tag filter bool logic

--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
         <div class="tag-filter-search">
           <input type="text" id="tag-search" placeholder="Search tags..." />
         </div>
+        <div class="filter-mode-info">
+          <strong>Filter Logic:</strong> Click mode buttons to cycle through options.
+          <br />
+          <span class="mode-badge or-mode">OR</span> = match any
+          <span class="mode-badge and-mode">AND</span> = must have
+          <span class="mode-badge not-mode">NOT</span> = exclude
+        </div>
         <div id="tag-list" class="tag-list"></div>
         <button id="clear-filters-btn" class="clear-filters-btn">
           Clear All
