Updating language for filter logic

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
           <input type="text" id="tag-search" placeholder="Search tags..." />
         </div>
         <div class="filter-mode-info">
-          <strong>Filter Logic:</strong> Click mode buttons to cycle through options.
+          <strong>Three Filter Buckets:</strong> Click mode buttons to cycle.
           <br />
-          <span class="mode-badge or-mode">OR</span> = match any
-          <span class="mode-badge and-mode">AND</span> = must have
-          <span class="mode-badge not-mode">NOT</span> = exclude
+          <span class="mode-badge any-mode">ANY</span> = match at least one
+          <span class="mode-badge must-mode">MUST</span> = must have all
+          <span class="mode-badge none-mode">NONE</span> = exclude all
         </div>
         <div id="tag-list" class="tag-list"></div>
         <button id="clear-filters-btn" class="clear-filters-btn">
